# ParallelPixelization

./: CMakeLists.txt  README.md  pixelCPUTest.cpp  pixelCUDATest.cu
include/: CMakeLists.txt
include/geometry/: geometry.hpp
include/infoLog/: consoleColor.hpp  infoPrint.hpp  log.hpp
include/utils/: CMakeLists.txt  utils.hpp
include/utils/CUDA/: cudaCheck.cuh
include/utils/common/: cmdLineParser.hpp  cmdLineParser.inl  timer.hpp
res/: bigpolygon.wkt
src/: CMakeLists.txt
src/CPU/: CMakeLists.txt
src/CPU/OpenMP/: CMakeLists.txt  pixelMP.cpp  pixelMP.h
src/CPU/pThread/: CMakeLists.txt  pixelThread.cpp  pixelThread.h
src/Pixel/: CMakeLists.txt  pixelData.cpp  pixelData.h
src/Point/: CMakeLists.txt  PointData.cpp  PointData.h
src/Visualization/: CMakeLists.txt  myViewer.cpp  myViewer.h
